--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,10 @@
     <title>Run Smart</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="css/slick.css">
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
+<!--     <link rel="stylesheet" href="css/animate.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -29,7 +31,7 @@
                 </div>
             </header>
             <div class="promo__wrapper">
-                <h1 class="promo__title">Подбор пульсометра</h1>
+                <h1 class="promo__title animate__animated animate__bounce">Подбор пульсометра</h1>
                 <h2 class="promo__subtitle">с учётом Вашего уровня подготовки</h2>
                 <div class="promo__icons">
                     <div class="promo__icon"><span><img src="img/first-section/timer.png" alt="timer"></span>Время подбора: 10 минут</div>
@@ -85,7 +87,7 @@
             </form>
         </div>
     </section>
-    <section class="carousel">
+    <div     class="carousel">
         <div class="container">
             <div class="carousel__inner">
                 <div><img src="img/fouth-section/first-slide.png" alt="first-slide" class="carousel_img"></div>
@@ -93,7 +95,7 @@
                 <div><img src="img/fouth-section/third-slide.png" alt="third-slide" class="carousel_img"></div>
             </div>
         </div>
-    </section>
+    </div>
     <section class="catalog">
         <div class="container">
             <h2 class="catalog__title">Каталог пульсометров</h2>
@@ -109,8 +111,9 @@
                         <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
-                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                        <!-- <a href="#" class="catalog-item__back">НАЗАД</a> -->
                     </ul>
+                    <a href="#" class="catalog-item__back">НАЗАД</a>
                     <div class="catalog-item__content catalog-item__content_active">
                         <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
                         <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
@@ -132,8 +135,9 @@
                         <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
-                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                        <!-- <a href="#" class="catalog-item__back">НАЗАД</a> -->
                     </ul>
+                    <a href="#" class="catalog-item__back">НАЗАД</a>
                     <div class="catalog-item__content catalog-item__content_active">
                         <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
                         <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
@@ -155,8 +159,9 @@
                         <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
-                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                       <!--  <a href="#" class="catalog-item__back">НАЗАД</a> -->
                     </ul>
+                    <a href="#" class="catalog-item__back">НАЗАД</a>
                     <div class="catalog-item__content catalog-item__content_active">
                         <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
                         <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
@@ -178,8 +183,9 @@
                         <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
-                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                        <!-- <a href="#" class="catalog-item__back">НАЗАД</a> -->
                     </ul>
+                    <a href="#" class="catalog-item__back">НАЗАД</a>
                     <div class="catalog-item__content catalog-item__content_active">
                         <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
                         <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
@@ -200,8 +206,9 @@
                         <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
-                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                        <!-- <a href="#" class="catalog-item__back">НАЗАД</a> -->
                     </ul>
+                    <a href="#" class="catalog-item__back">НАЗАД</a>
                     <div class="catalog-item__content catalog-item__content_active">
                         <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
                         <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
@@ -222,8 +229,9 @@
                         <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
-                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                        <!-- <a href="#" class="catalog-item__back">НАЗАД</a> -->
                     </ul>
+                    <a href="#" class="catalog-item__back">НАЗАД</a>
                     <div class="catalog-item__content catalog-item__content_active">
                         <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
                         <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
@@ -247,8 +255,9 @@
                         <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
-                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                        <!-- <a href="#" class="catalog-item__back">НАЗАД</a> -->
                     </ul>
+                    <a href="#" class="catalog-item__back">НАЗАД</a>
                     <div class="catalog-item__content catalog-item__content_active">
                         <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
                         <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
@@ -270,8 +279,9 @@
                         <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
-                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                        <!-- <a href="#" class="catalog-item__back">НАЗАД</a> -->
                     </ul>
+                    <a href="#" class="catalog-item__back">НАЗАД</a>
                     <div class="catalog-item__content catalog-item__content_active">
                         <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
                         <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
@@ -293,8 +303,9 @@
                         <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
-                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                        <!-- <a href="#" class="catalog-item__back">НАЗАД</a> -->
                     </ul>
+                    <a href="#" class="catalog-item__back">НАЗАД</a>
                     <div class="catalog-item__content catalog-item__content_active">
                         <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
                         <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
@@ -318,8 +329,9 @@
                         <li class="catalog-item__list-item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li class="catalog-item__list-item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li class="catalog-item__list-item">Вы сможете посмотреть данные по 10 тренировкам.</li>
-                        <a href="#" class="catalog-item__back">НАЗАД</a>
+                        <!-- <a href="#" class="catalog-item__back">НАЗАД</a> -->
                     </ul>
+                    <a href="#" class="catalog-item__back">НАЗАД</a>
                     <div class="catalog-item__content catalog-item__content_active">
                         <div class="catalog-item__img"><img src="img/fifth-section/product-photo.png" alt="pulse"></div>
                         <h3 class="catalog-item__title">Пульсометр Polar FT1</h3>
@@ -341,7 +353,7 @@
     <section class="reviews">
         <div class="container">
             <h2 class="reviews__title">отзывы клиентов</h2>
-            <div class="reviews__wrapper">
+            <div data-wow-duration="2s" class="reviews__wrapper animate__animated wow  animate__fadeInUp">
                 <div class="reviews-item">
                     <span><img src="img/sixth-section/photo_1.png" alt="ava 1" class="reviews__img"></span>
                     <div class="reviews-item__txt">
@@ -386,7 +398,7 @@
     </section>
     <footer class="footer">
         <div class="footer__map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.3524742374248!2d37.64373443248317!3d55.76974990302967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2snl!4v1671995447876!5m2!1sru!2snl" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.3524742374248!2d37.64373443248317!3d55.76974990302967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2snl!4v1671995447876!5m2!1sru!2snl" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="footer__info">
             <address class="footer__address">Украина, Мясницкий проезд, д.3с1</address>
@@ -400,7 +412,7 @@
     </footer>
     <div class="overlay">
         <div class="modal" id="consultation">
-            <div class="modal__close">&times</div>
+            <div class="modal__close">&amp;times</div>
             <h3 class="modal__title">Просто заполните форму заявки</h3>
             и мы перезвоним вам в течении 10 минут
             <form action="#" class="feed-form feed-form_mr">
@@ -413,7 +425,7 @@
             </form>
         </div>
         <div class="modal" id="order">
-            <div class="modal__close">&times</div>
+            <div class="modal__close">&amp;times</div>
             <h3 class="modal__title">Ваш заказ:</h3>
             Пульсометр Polar FT1
             <form action="#" class="feed-form feed-form_mr">
@@ -426,20 +438,21 @@
             </form>
         </div>
         <div class="modal modal_mini" id="thanks">
-            <div class="modal__close">&times</div>
+            <div class="modal__close">&amp;times</div>
             <h3 class="modal__title">Спасибо за вашу заявку!</h3>
             Наш менеджер свяжется с вами в ближайшее время!
         </div>
     </div>
     <a href="#promo" class="scroll-up"><img src="img/icons/circle-chevron-up-solid.svg" alt="scroll-up"></a>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="js/slick.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.validate.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
-    <script src="jquery.maskedinput.js" type="text/javascript"></script>
+    <script src="jquery.maskedinput.js"></script>
+    <script src="js/wow.min.js"></script>
 <!--     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
-    <script type="text/javascript" src="js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
